# ai-newspaper

./: .gitignore  AGENTS.md  README.md  flake.nix  pyproject.toml
.github/ISSUE_TEMPLATE/: chatgpt-analysis.yml
.github/workflows/: prepare-briefing.yml  render-chatgpt-analysis.yml
config/: sources.yaml
docs/: architecture.md  chatgpt_project_workflow.md  requirements.md  scheduling.md
schemas/: chatgpt_analysis.schema.json
scripts/: build_briefing_package.py  chatgpt_analysis_bridge.py  com.local.ai-newspaper.plist.example  extract_chatgpt_analysis.py  render_chatgpt_analysis.py
src/ai_newspaper/: __init__.py
src/ai_newspaper/adapters/: __init__.py
src/ai_newspaper/domain/: __init__.py  models.py  policies.py
src/ai_newspaper/entrypoints/: cli.py
src/ai_newspaper/infrastructure/: clock.py  config.py  sqlite.py
src/ai_newspaper/usecases/: analyze_articles.py  analyze_topics.py  classify_topics.py  cluster_topics.py  fetch_articles.py  generate_digest.py  normalize_articles.py  ports.py  prune_digests.py  render_digest.py  run_pipeline.py
templates/: digest.html.j2
tests/: test_cli.py  test_domain_models.py  test_domain_policies.py
tests/adapters/storage/: test_filesystem_digest_store.py
tests/infrastructure/fetchers/: test_rss_fetcher.py
tests/infrastructure/persistence/: test_sqlite_repositories.py
tests/infrastructure/renderers/: test_jinja_digest_renderer.py
tests/scripts/: test_chatgpt_analysis_bridge.py
tests/usecases/: test_article_topic_processing.py  test_generate_digest.py  test_prune_digests.py  test_run_pipeline.py
(+26 files in other folders)
