[project]
name = "ai-newspaper"
version = "0.1.0"
description = "Local-first personal AI newspaper generator"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "feedparser>=6.0.11",
  "jinja2>=3.1.4",
  "pyyaml>=6.0.2",
]

[project.scripts]
ai-newspaper = "ai_newspaper.entrypoints.cli:main"

[dependency-groups]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
packages = ["ai_newspaper"]
